# Junior-AI-ZikraInfoTech

./: README.md  escalation_log.csv  langgraph.json  pyproject.toml  requirements.txt  run_test.py  setup_rag.py  test_rag.py
data/: mock_docs.json
src/: escalated_tickets.csv  graph.py  llm.py  main.py  simple_rag.py  state.py
src/logs/: escalated_tickets.csv
src/nodes/: classify.py  draft.py  escalate.py  input_node.py  retrieve.py  retry.py  review.py
