[project]
name = "support-ticket-agent"
version = "0.1.0"
description = "LangGraph support agent"

dependencies = [
  "langgraph",
  "openai",
  "pydantic",
  "python-dotenv"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
